--- a/style.css
+++ b/style.css
@@ -75,11 +75,12 @@ body{
     border-radius: 10px;
 }
 
-.banner img{
-    display: flex;
-    width: 100% ;
-    height: 100vh;
+.banner{
 
+    background-image: url(sources/banner.png);
+    background-size: cover;
+    display: flex;
+    width: 100%;
 }
 
 @media (max-width: 650px) {
