--- a/style.css
+++ b/style.css
@@ -77,10 +77,19 @@ body{
 
 .banner{
 
-    background-image: url(sources/banner.png);
-    background-size: cover;
+    background-image: url("sources/banner.png");
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    /* background-size: auto; */
+    background-size: cover; 
     display: flex;
     width: 100%;
+    height: 100vh
+}
+
+.banner-content{
+
 }
 
 @media (max-width: 650px) {
@@ -113,4 +122,8 @@ body{
     .nav-links.active{
         display: flex;
     }
+    .banner{
+        height: 80vh;
+    }
+
 }
