--- a/style.css
+++ b/style.css
@@ -221,9 +221,9 @@ body{
     cursor: pointer;
 }
 .school{
-    width: 20%;
+    width: 429px;
     padding: 2rem;
-    margin: .5rem;
+    margin: 2rem;
     background-color: var(--bgcolor);
     align-items: center;
     border-radius: 12px;
@@ -259,10 +259,11 @@ body{
 
 .skill-container{
     background-color: var(--defaultBg);
-    width: 25%;
+    width: 420px;
     padding: 25px;
     margin: 2rem;
     text-align: center;
+    border-radius: 10px;
 }
 
 .skill-container img{
