--- a/style.css
+++ b/style.css
@@ -351,6 +351,13 @@ body{
     color: var(--textdarkbgcolor);
 }
 
+.experiences h2{
+    color: var(--textdarkbgcolor);
+}
+
+.experiences p{
+    color: var(--textdarkbgcolor);
+}
 
 
 @media screen and (max-width: 650px) {
