--- a/style.css
+++ b/style.css
@@ -232,9 +232,9 @@ body{
     text-align: center;
     
 }
-.school:hover{
+/* .school:hover{
     z-index: 10;
-}
+} */
 
 .schoolLogo{
     width: 233px;
@@ -243,7 +243,18 @@ body{
 .school h3{
     text-transform: uppercase;
 }
+#skills{
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    text-align: center  ;
+}
 
+#skills h1{
+    font-size: 76px;
+    padding: 4rem;
+    color: var(--textdarkbgcolor);
+}
 .skills{
     width: 100%;
     padding: 75px 0;
@@ -257,7 +268,9 @@ body{
 .skills h1{
     font-size: 5rem;
 }
-
+.skill1{
+    display: block;
+}
 .skill-container h3{
     padding: 1rem;
     font-size: 25px;
@@ -307,6 +320,7 @@ body{
 
 .experiences{
     width: 100%;
+    height: 100vh;
     background-color: var(--defaultBg);
 }
 
@@ -357,6 +371,7 @@ body{
 
 .experiences p{
     color: var(--textdarkbgcolor);
+    padding: .5rem;
 }
 
 
